# spot

./: .editorconfig  .gitattributes  .gitignore  ARTISTS  AUTHORS  Cargo.toml  LICENSE  README.md  TRANSLATORS  cargo-sources.json  dev.alextren.Spot.develoment.json  dev.alextren.Spot.development.json  dev.alextren.Spot.json  dev.alextren.Spot.snapshots.json  meson.build  meson_options.txt  rustfmt.toml
build-aux/: cargo.sh  clippy.sh  flatpak-cargo-generator.py  test.sh
data/: dev.alextren.Spot.appdata.xml  dev.alextren.Spot.desktop  dev.alextren.Spot.gschema.xml  meson.build
doc/: .latexmkrc  Dockerfile  Makefile  doc.tex  enter.sh
po/: LINGUAS  POTFILES  ar.po  bg.po  bn.po  ca.po  cs.po  de.po  en.po  es.po  et.po  eu.po  fi.po  fr.po  ia.po  id.po  it.po  ja.po  meson.build  nb.po  nl.po  pl.po  (+10 more)
src/: app.css  config.rs  config.rs.in  main.rs  meson.build  settings.rs  spot.gresource.xml  window.blp  window.ui  window.ui.in
src/api/: api.rs  api_models.rs  cache.rs  cached_client.rs  client.rs  connect_player.rs  mod.rs  spotify_client.rs
src/app/: batch_loader.rs  browser_state.rs  credentials.rs  dispatch.rs  list_store.rs  loader.rs  mod.rs  models.rs  rng.rs  state.rs  utils.rs
src/app/backend/: api.rs  api_models.rs  cache.rs  mod.rs  player.rs
src/app/components/: browser.rs  details.rs  gtypes.rs  labels.rs  login.rs  mod.rs  navigation.rs  playback.rs  player.rs  player_notifier.rs  playlist.rs  utils.rs  window.rs
src/app/components/album/: album.blp  album.css  album.rs  album.ui  album_compact.ui  mod.rs
src/app/components/album_info/: album_info.css  album_info.rs  album_info.ui  album_info_model.rs  mod.rs
src/app/components/artist/: artist.blp  artist.ui  mod.rs
src/app/components/artist_details/: artist_details.blp  artist_details.css  artist_details.rs  artist_details.ui  artist_details_model.rs  mod.rs
src/app/components/browser/: browser.rs  browser.ui  browser_model.rs  mod.rs
src/app/components/details/: album_header.blp  album_header.css  album_header.rs  album_header.ui  details.blp  details.css  details.rs  details.ui  details_model.rs  mod.rs  release_details.blp  release_details.rs  release_details.ui
src/app/components/device_selector/: component.rs  device_selector.blp  device_selector.ui  mod.rs  widget.rs
src/app/components/followed_artists/: followed_artists.blp  followed_artists.rs  followed_artists_model.rs  mod.rs
src/app/components/gtypes/: album_model.rs  mod.rs  song_model.rs
src/app/components/headerbar/: component.rs  headerbar.blp  headerbar.css  headerbar.ui  mod.rs  widget.rs
src/app/components/login/: login.blp  login.css  login.rs  login.ui  login_model.rs  mod.rs
src/app/components/navigation/: create_playlist.rs  create_playlist.ui  factory.rs  home.rs  home_model.rs  mod.rs  navigation.rs  navigation_model.rs
src/app/components/notification/: mod.rs
src/app/components/now_playing/: mod.rs  now_playing.blp  now_playing.css  now_playing.rs  now_playing.ui  now_playing_model.rs
src/app/components/playback/: component.rs  mod.rs  playback.css  playback.rs  playback_control.rs  playback_controls.blp  playback_controls.rs  playback_controls.ui  playback_info.blp  playback_info.rs  playback_info.ui  playback_model.rs  playback_widget.blp  playback_widget.rs  playback_widget.ui  volume_slider.blp
src/app/components/playlist/: mod.rs  playlist.rs  playlist_model.rs  song.blp  song.css  song.rs  song.ui  song_actions.rs
src/app/components/playlist_details/: mod.rs  playlist_details.blp  playlist_details.css  playlist_details.rs  playlist_details.ui  playlist_details.ui~  playlist_details_model.rs  playlist_header.blp  playlist_header.css  playlist_header.rs  playlist_header.ui  playlist_headerbar.blp  playlist_headerbar.rs  playlist_headerbar.ui
src/app/components/saved_playlists/: mod.rs  saved_playlists.blp  saved_playlists.rs  saved_playlists.ui  saved_playlists_model.rs
src/app/components/saved_tracks/: mod.rs  saved_tracks.blp  saved_tracks.css  saved_tracks.rs  saved_tracks.ui  saved_tracks_model.rs
src/app/components/scrolling_header/: mod.rs  scrolling_header.blp  scrolling_header.ui  scrolling_header_widget.rs  widget.rs
src/app/components/search/: mod.rs  search.blp  search.rs  search.ui  search_bar.rs  search_bar_model.rs  search_button.rs  search_model.rs
src/app/components/selection/: component.rs  mod.rs  selection_heading.rs  selection_toolbar.blp  selection_toolbar.css  selection_toolbar.ui  selection_tools.rs  selection_widgets.rs  widget.rs
src/app/components/selection_editor/: mod.rs
src/app/components/settings/: mod.rs  settings.blp  settings.rs  settings.ui  settings_model.rs
src/app/components/sidebar/: create_playlist.blp  create_playlist.rs  create_playlist.ui  mod.rs  sidebar.rs  sidebar_item.rs  sidebar_row.blp  sidebar_row.rs  sidebar_row.ui
src/app/components/sidebar_listbox/: mod.rs  sidebar.css  sidebar_icon_widget.rs  sidebar_icon_widget.ui  sidebar_item.rs  sidebar_row.rs
src/app/components/song/: mod.rs  song.css  song.rs  song.ui
src/app/components/user_details/: mod.rs  user_details.blp  user_details.css  user_details.rs  user_details.ui  user_details_model.rs
src/app/components/user_menu/: mod.rs  user_menu.rs  user_menu_model.rs
src/app/components/window/: mod.rs
src/app/connect/: browser.rs  details.rs  login.rs  mod.rs  navigation.rs  playback.rs  player.rs  playlist.rs
src/app/dbus/: generated.rs  mod.rs  mpris.rs  types.rs
src/app/gtypes/: album_model.rs  artist_model.rs  mod.rs  song_model.rs
src/app/models/: album_model.rs  artist_model.rs  core.rs  main.rs  mod.rs
src/app/models/gtypes/: album_model.rs  mod.rs  song_model.rs
src/app/models/songs/: mod.rs  song_list_model.rs  song_model.rs  support.rs
src/app/state/: app_model.rs  app_state.rs  browser_state.rs  login_state.rs  mod.rs  pagination.rs  playback_state.rs  screen_states.rs  selection_state.rs  settings_state.rs  sidebar_state.rs
src/connect/: mod.rs  player.rs
src/dbus/: listener.rs  mod.rs  mpris.rs  types.rs
src/player/: mod.rs  player.rs
(+11 files in other folders)
