[package]
name = "spot"
version = "0.3.3"
edition = "2018"
license = "MIT"

[dependencies.gtk]
version = "^0.4.1"
package = "gtk4"

[dependencies.gdk]
version = "^0.4.0"
package = "gdk4"

[dependencies.gio]
version = "^0.16.3"
features = ["v2_60"]

[dependencies.glib]
version = "^0.15.9"
features = ["v2_60"]

[dependencies.librespot]
version = "0.3.1"
features = ["alsa-backend", "pulseaudio-backend"]

[dependencies.protobuf]
version = "2.25.2"

[dependencies.tokio]
version = "1"
features = ["rt", "macros", "sync"]


[dependencies.futures]
package = "futures"
version = "0.3.18"

[dependencies.serde]
version = "^1.0.136"
features = ["derive"]

[dependencies.serde_json]
version = "^1.0.79"

[dependencies.isahc]
version = "^1.7.0"
features = ["json"]

[dependencies.rand]
version = "^0.8.5"
features = ["small_rng"]

[dependencies.gettext-rs]
version = "0.7.0"
features = ["gettext-system"]

[dependencies]
secret-service = "^2.0.1"
gdk-pixbuf = "^0.15.6"
libadwaita = "^0.1.0-beta-1"
ref_filter_map = "^1.0.1"
regex = "^1.5.5"
async-std = "^1.10.0"
form_urlencoded = "^1.0.1"
zbus = "^2.0.1"
zvariant = "^3.1.2"
thiserror = "^1.0.30"
lazy_static = "^1.4.0"
log = "0.4.14"
env_logger = "0.9.0"
percent-encoding = "2.1.0"
