[package]
name = "spot"
version = "0.4.0"
edition = "2018"
license = "MIT"

[dependencies.gtk]
version = "^0.6.6"
package = "gtk4"
features = ["gnome_44", "blueprint"]

[dependencies.libadwaita]
version = "^0.4.1"
features = ["v1_2"]

[dependencies.gdk]
version = "^0.6.3"
package = "gdk4"

[dependencies.gio]
version = "^0.17.9"
features = ["v2_60"]

[dependencies.glib]
version = "^0.17.9"
features = ["v2_60"]

[dependencies.librespot]
version = "0.4.2"
features = ["alsa-backend", "pulseaudio-backend", "gstreamer-backend"]

[dependencies.tokio]
version = "1"
features = ["rt", "macros", "sync"]

[dependencies.futures]
package = "futures"
version = "0.3.18"

[dependencies.serde]
version = "^1.0.136"
features = ["derive"]

[dependencies.serde_json]
version = "^1.0.96"

[dependencies.isahc]
version = "^1.7.2"
features = ["json"]

[dependencies.rand]
version = "^0.8.5"
features = ["small_rng"]

[dependencies.gettext-rs]
version = "0.7.0"
features = ["gettext-system"]

[dependencies.secret-service]
version = "3.0.1"
features = ["rt-async-io-crypto-rust"]

[dependencies]
gdk-pixbuf = "0.17.0"
ref_filter_map = "1.0.1"
regex = "1.8.3"
async-std = "1.12.0"
form_urlencoded = "1.0.1"
zbus = "3.13"
zvariant = "3.14"
thiserror = "1.0.40"
lazy_static = "1.4.0"
log = "0.4.17"
env_logger = "0.11.2"
percent-encoding = "2.2.0"
